# npm-lite

./: .dockerignore  .env.example  CLAUDE.md  Caddyfile.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  e2e.yml  release.yml  test.yml
crates/app/: Cargo.toml
crates/app/src/: config.rs  gc.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  integrity.rs  lib.rs  types.rs  validation.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs  packument.rs  publish.rs
crates/db/src/repo/: acl.rs  events.rs  mod.rs  packages.rs  teams.rs  tokens.rs  users.rs  versions.rs
crates/entity/: Cargo.toml
crates/entity/src/: dist_tags.rs  lib.rs  package_acl.rs  package_versions.rs  packages.rs  publish_events.rs  team_members.rs  teams.rs  tokens.rs  upstream_cache.rs  upstream_configs.rs  users.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20240101_000001_create_tables.rs  m20240202_000001_upstream_cache.rs  m20240303_000001_upstream_configs.rs  m20240404_000001_add_version_source.rs
crates/registry/: Cargo.toml
crates/registry/src/: auth.rs  error.rs  lib.rs  state.rs
crates/registry/src/handlers/: dist_tags.rs  login.rs  mod.rs  packument.rs  ping.rs  publish.rs  search.rs  tarball.rs  unpublish.rs  version.rs  whoami.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  gc.rs  lib.rs  operations.rs
crates/upstream/: Cargo.toml
crates/upstream/src/: cache.rs  client.rs  config.rs  db_rules.rs  error.rs  health.rs  integrity.rs  lib.rs  proxy.rs  router.rs  warmup.rs  webhook.rs
crates/web/: Cargo.toml
crates/web/src/: error.rs  lib.rs  middleware.rs  state.rs  templates.rs
crates/web/src/pages/: access.rs  activity.rs  dashboard.rs  login.rs  mod.rs  packages.rs  settings.rs  teams.rs  tokens.rs  upstream.rs  upstream_api.rs  users.rs
docs/: PRD.md  UPSTREAM.md
