[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/entity",
    "crates/db",
    "crates/storage",
    "crates/registry",
    "crates/web",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
semver = { version = "1", features = ["serde"] }
bytes = "1"
futures = "0.3"
dotenvy = "0.15"

# Internal crates
npm-core = { path = "crates/core" }
npm-entity = { path = "crates/entity" }
npm-db = { path = "crates/db" }
npm-storage = { path = "crates/storage" }
npm-registry = { path = "crates/registry" }
npm-web = { path = "crates/web" }
