[package]
name = "npm-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "npm-registry"
path = "src/main.rs"

[dependencies]
npm-core = { workspace = true }
npm-migration = { workspace = true }
npm-db = { workspace = true }
npm-storage = { workspace = true }
npm-registry = { workspace = true }
npm-web = { workspace = true }
npm-entity = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
