[package]
name = "npm-db"
version.workspace = true
edition.workspace = true

[dependencies]
npm-core = { workspace = true }
npm-entity = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
