[package]
name = "npm-registry"
version.workspace = true
edition.workspace = true

[dependencies]
npm-core = { workspace = true }
npm-db = { workspace = true }
npm-storage = { workspace = true }
npm-entity = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
