[package]
name = "npm-storage"
version.workspace = true
edition.workspace = true

[dependencies]
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-stream = "0.3"
