[package]
name = "npm-upstream"
version.workspace = true
edition.workspace = true

[dependencies]
npm-entity = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = "2"
toml = "0.8"
regex = "1"
sha1 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
